--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
     <!-- Bootstrap JS Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JS -->
-    <script type="module" src="js/app.js"></script>
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
+    <script  type="text/babel" src="js/app.js"></script>
   </body>
 </html>
